// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stats-with-reports.json, 1`] = `
Object {
  "__statoscope": Object {
    "extensions": Array [
      Object {
        "descriptor": Object {
          "name": "foo",
        },
      },
      Object {
        "descriptor": Object {
          "adapter": undefined,
          "author": Object {
            "name": "Sergey Melyukov",
            "url": "https://twitter.com/smelukov",
          },
          "description": "Statoscope extension to store custom reports in stats",
          "homepage": "https://github.com/statoscope/statoscope/",
          "name": "@statoscope/stats-extension-custom-reports",
          "version": "8.8.8",
        },
        "payload": Object {
          "compilations": Array [
            Object {
              "id": null,
              "reports": Array [
                Object {
                  "id": "baz",
                  "view": Array [],
                },
                Object {
                  "data": Array [
                    1,
                    2,
                    3,
                  ],
                  "id": "foo",
                  "view": Array [
                    "struct",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`stats-with-reports.json, 2`] = `
Object {
  "__statoscope": Object {
    "extensions": Array [
      Object {
        "descriptor": Object {
          "name": "foo",
        },
      },
      Object {
        "descriptor": Object {
          "adapter": undefined,
          "author": Object {
            "name": "Sergey Melyukov",
            "url": "https://twitter.com/smelukov",
          },
          "description": "Statoscope extension to store custom reports in stats",
          "homepage": "https://github.com/statoscope/statoscope/",
          "name": "@statoscope/stats-extension-custom-reports",
          "version": "8.8.8",
        },
        "payload": Object {
          "compilations": Array [
            Object {
              "id": null,
              "reports": Array [
                Object {
                  "id": "baz",
                  "view": Array [],
                },
                Object {
                  "data": Array [
                    1,
                    2,
                    3,
                  ],
                  "id": "foo",
                  "view": Array [
                    "list",
                  ],
                },
                Object {
                  "data": Array [
                    4,
                    5,
                    6,
                  ],
                  "id": "bar",
                  "view": Array [
                    "list",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`stats-without-extensions.json, 1`] = `
Object {
  "__statoscope": Object {
    "extensions": Array [
      Object {
        "descriptor": Object {
          "adapter": undefined,
          "author": Object {
            "name": "Sergey Melyukov",
            "url": "https://twitter.com/smelukov",
          },
          "description": "Statoscope extension to store custom reports in stats",
          "homepage": "https://github.com/statoscope/statoscope/",
          "name": "@statoscope/stats-extension-custom-reports",
          "version": "8.8.8",
        },
        "payload": Object {
          "compilations": Array [
            Object {
              "id": null,
              "reports": Array [
                Object {
                  "data": Array [
                    1,
                    2,
                    3,
                  ],
                  "id": "foo",
                  "view": Array [
                    "struct",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`stats-without-extensions.json, 2`] = `
Object {
  "__statoscope": Object {
    "extensions": Array [
      Object {
        "descriptor": Object {
          "adapter": undefined,
          "author": Object {
            "name": "Sergey Melyukov",
            "url": "https://twitter.com/smelukov",
          },
          "description": "Statoscope extension to store custom reports in stats",
          "homepage": "https://github.com/statoscope/statoscope/",
          "name": "@statoscope/stats-extension-custom-reports",
          "version": "8.8.8",
        },
        "payload": Object {
          "compilations": Array [
            Object {
              "id": null,
              "reports": Array [
                Object {
                  "data": Array [
                    1,
                    2,
                    3,
                  ],
                  "id": "foo",
                  "view": Array [
                    "list",
                  ],
                },
                Object {
                  "data": Array [
                    4,
                    5,
                    6,
                  ],
                  "id": "bar",
                  "view": Array [
                    "list",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`stats-without-meta.json, 1`] = `
Object {
  "__statoscope": Object {
    "extensions": Array [
      Object {
        "descriptor": Object {
          "adapter": undefined,
          "author": Object {
            "name": "Sergey Melyukov",
            "url": "https://twitter.com/smelukov",
          },
          "description": "Statoscope extension to store custom reports in stats",
          "homepage": "https://github.com/statoscope/statoscope/",
          "name": "@statoscope/stats-extension-custom-reports",
          "version": "8.8.8",
        },
        "payload": Object {
          "compilations": Array [
            Object {
              "id": null,
              "reports": Array [
                Object {
                  "data": Array [
                    1,
                    2,
                    3,
                  ],
                  "id": "foo",
                  "view": Array [
                    "struct",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`stats-without-meta.json, 2`] = `
Object {
  "__statoscope": Object {
    "extensions": Array [
      Object {
        "descriptor": Object {
          "adapter": undefined,
          "author": Object {
            "name": "Sergey Melyukov",
            "url": "https://twitter.com/smelukov",
          },
          "description": "Statoscope extension to store custom reports in stats",
          "homepage": "https://github.com/statoscope/statoscope/",
          "name": "@statoscope/stats-extension-custom-reports",
          "version": "8.8.8",
        },
        "payload": Object {
          "compilations": Array [
            Object {
              "id": null,
              "reports": Array [
                Object {
                  "data": Array [
                    1,
                    2,
                    3,
                  ],
                  "id": "foo",
                  "view": Array [
                    "list",
                  ],
                },
                Object {
                  "data": Array [
                    4,
                    5,
                    6,
                  ],
                  "id": "bar",
                  "view": Array [
                    "list",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`stats-without-reports.json, 1`] = `
Object {
  "__statoscope": Object {
    "extensions": Array [
      Object {
        "descriptor": Object {
          "name": "foo",
        },
      },
      Object {
        "descriptor": Object {
          "adapter": undefined,
          "author": Object {
            "name": "Sergey Melyukov",
            "url": "https://twitter.com/smelukov",
          },
          "description": "Statoscope extension to store custom reports in stats",
          "homepage": "https://github.com/statoscope/statoscope/",
          "name": "@statoscope/stats-extension-custom-reports",
          "version": "8.8.8",
        },
        "payload": Object {
          "compilations": Array [
            Object {
              "id": null,
              "reports": Array [
                Object {
                  "data": Array [
                    1,
                    2,
                    3,
                  ],
                  "id": "foo",
                  "view": Array [
                    "struct",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`stats-without-reports.json, 2`] = `
Object {
  "__statoscope": Object {
    "extensions": Array [
      Object {
        "descriptor": Object {
          "name": "foo",
        },
      },
      Object {
        "descriptor": Object {
          "adapter": undefined,
          "author": Object {
            "name": "Sergey Melyukov",
            "url": "https://twitter.com/smelukov",
          },
          "description": "Statoscope extension to store custom reports in stats",
          "homepage": "https://github.com/statoscope/statoscope/",
          "name": "@statoscope/stats-extension-custom-reports",
          "version": "8.8.8",
        },
        "payload": Object {
          "compilations": Array [
            Object {
              "id": null,
              "reports": Array [
                Object {
                  "data": Array [
                    1,
                    2,
                    3,
                  ],
                  "id": "foo",
                  "view": Array [
                    "list",
                  ],
                },
                Object {
                  "data": Array [
                    4,
                    5,
                    6,
                  ],
                  "id": "bar",
                  "view": Array [
                    "list",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  },
}
`;
